[gd_scene load_steps=10 format=2]

[ext_resource path="res://Entities/NPC/NPC.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/NPC/Josh/Josh.png" type="Texture" id=2]
[ext_resource path="res://Entities/NPC/Josh/JoshDialog.tres" type="Resource" id=3]
[ext_resource path="res://Entities/NPC/Josh/Josh.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 5 )

[sub_resource type="CircleShape2D" id=1]
radius = 30.0167

[sub_resource type="Animation" id=3]
resource_name = "Default"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "DefaultSkele"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Josh" instance=ExtResource( 1 )]
script = ExtResource( 4 )
defaultDialog = "Distress"

[node name="Sprite" parent="ScaleHelper" index="0"]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2
frame = 0

[node name="CollisionShape2D" parent="." index="1"]
visible = false
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="Iteraction" parent="." index="3"]
visible = false
position = Vector2( 0, -37 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Iteraction" index="3"]
position = Vector2( 0, 37 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="4"]
anims/Default = SubResource( 3 )
anims/DefaultSkele = SubResource( 5 )
anims/RESET = SubResource( 4 )

[node name="Dialog" parent="." index="5"]
position = Vector2( 0, -38 )

[node name="Dialog" parent="Dialog" index="0"]
npcName = "Josh"
dialog = ExtResource( 3 )

[connection signal="start_talking" from="." to="." method="_on_start_talking"]
[connection signal="done" from="Dialog/Dialog" to="." method="start_quest"]
[connection signal="timer_done" from="Dialog/Dialog" to="." method="_on_dialog_timer_done"]
